--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -32,20 +32,26 @@ jobs:
     - name: test
       run: |
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
+        echo "secret: ${{env.SECRET}}"
+    # - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    #   with:
+    #     environment: staging
+    #   secrets:
+    #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET)] }}
 
-    - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-      with:
-        environment: staging
-        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET)] }}
 
-
-  # Secret_format_job:
-  #   needs: [step2]
-  #   uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-  #   with:
-  #     environment: staging
-  #   secrets:
-  #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET)] }}
+  Secret_format_job:
+    needs: [step2]
+    runs-on: ubuntu-latest
+    environment: staging
+    steps:
+      - run: 
+          echo "secret:${{env.SECRET}} "
+    # uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    # with:
+    #   environment: staging
+    # secrets:
+    #   PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET)] }}
 
 
 
