--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,7 +1,8 @@
 name: Main workflow
 on: push 
+env:
+  SECRET_VAL: temp val
 jobs:
-
   step1:
     runs-on: ubuntu-latest
     environment: staging
