--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -30,15 +30,18 @@ jobs:
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
         echo "SECRET=${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}" >> GITHUB_ENV
         echo "SECRET_VAL=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_ENV
+        echo "NEW_SECRET=$SECRET"
     - name: test
       run: |
+        echo "SECRET: ${{ secrets.NEW_SECRET}}"
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
         echo "secret: ${{env.SECRET_VAL}}"
 
-    - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-      with:
-        environment: staging
-        PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET_VAL)] }}
+    # - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    #   with:
+    #     environment: staging
+    #   secrets:
+    #     PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET_VAL)] }}
 
 
   Secret_format_job:
