--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -30,7 +30,7 @@ jobs:
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
         echo "SECRET=${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}" >> GITHUB_ENV
         echo "SECRET_VAL=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_ENV
-        echo "NEW_SECRET=$SECRET"
+        echo "NEW_SECRET=$SECRET" >> GITHUB_ENV
     - name: test
       run: |
         echo "SECRET: ${{ secrets.NEW_SECRET}}"
