--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -8,7 +8,7 @@ on:
         default: staging    
     secrets:
       PUBLISH_PROFILE_SECRET:
-        required: true
+        required: false
 
 jobs:
   format-secret:
