--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -17,11 +17,18 @@ jobs:
     needs: [step1]
     runs-on: ubuntu-latest
     environment: staging
+    outputs:
+      OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE}}
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
     steps:
+    - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+      with:
+        environment: staging
+        PUBLISH_PROFILE_SECRET: ${{ steps.check_id.outputs.OUTPUT_PROFILE  }}
+
     - name: Check
       id: check_id                                                                                                                                                                          
       run: |
@@ -29,25 +36,22 @@ jobs:
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
         echo "SECRET=${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}" >> $GITHUB_ENV
-        echo "NEW_SECRET=$SECRET" >> GITHUB_ENV
+        echo "OUTPUT_PROFILE=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
     - name: test
       run: |
         echo "SECRET: ${{ secrets.SECRET}}"
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
 
-    - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-      with:
-        environment: staging
-        PUBLISH_PROFILE_SECRET: ${{ env.SECRET  }}
 
 
-  Secret_format_job:
-    needs: [step2]
-    runs-on: ubuntu-latest
-    environment: staging
-    steps:
-      - run: 
-          echo "secret:${{env.SECRET_VAL}} "
+
+  # Secret_format_job:
+  #   needs: [step2]
+  #   runs-on: ubuntu-latest
+  #   environment: staging
+  #   steps:
+  #     - run: 
+  #         echo "secret:${{env.SECRET_VAL}} "
     # uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     # with:
     #   environment: staging
