--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -14,6 +14,7 @@ jobs:
       run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
 
   step2:
+
     needs: [step1]
     runs-on: ubuntu-latest
     environment: staging
@@ -24,11 +25,6 @@ jobs:
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
     steps:
-    - uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-      with:
-        environment: staging
-        PUBLISH_PROFILE_SECRET: ${{ steps.check_id.outputs.OUTPUT_PROFILE  }}
-
     - name: Check
       id: check_id                                                                                                                                                                          
       run: |
@@ -41,8 +37,13 @@ jobs:
       run: |
         echo "SECRET: ${{ secrets.SECRET}}"
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
-
-
+        echo "${{needs.step2.outputs.OUTPUT_PROFILE}}"
+  Secret_format_job:
+    needs: [step2]
+    uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
+    with:
+      environment: staging
+      PUBLISH_PROFILE_SECRET: ${{ needs.step2.outputs.OUTPUT_PROFILE }}
 
 
   # Secret_format_job:
@@ -52,11 +53,7 @@ jobs:
   #   steps:
   #     - run: 
   #         echo "secret:${{env.SECRET_VAL}} "
-    # uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
-    # with:
-    #   environment: staging
-    # secrets:
-    #   PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}', env.SECRET)] }}
+
 
 
 
