--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -6,6 +6,9 @@ on:
         type: string
         required: true  
         default: staging    
+      PUBLISH_PROFILE_SECRET:
+        type: string
+        required: false
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -19,7 +22,7 @@ jobs:
 
       - name: writing secrets to file
         run: |
-          echo " ${{secrets.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
+          echo " ${{inputs.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
