--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -43,7 +43,8 @@ jobs:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      PUBLISH_PROFILE_SECRET: ${{ needs.step2.outputs.OUTPUT_PROFILE }}
+    secrets:
+      PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}',needs.step2.outputs.OUTPUT_PROFILE)] }}
 
 
   # Secret_format_job:
