--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: writing secrets to file
         run: |
-          echo " ${{inputs.PUBLISH_PROFILE_SECRET}}" > ${{ github.workspace }}/my_secret.txt
+          echo " ${{ secrets[inputs.PUBLISH_PROFILE_SECRET] }}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
