--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     outputs:
-      OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE}}
+      OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE }}
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
@@ -37,13 +37,13 @@ jobs:
       run: |
         echo "SECRET: ${{ secrets.SECRET}}"
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
-        echo "${{needs.step2.check_id.outputs.OUTPUT_PROFILE}}"
+        echo "${{ steps.check_id.outputs.OUTPUT_PROFILE }}"
   Secret_format_job:
     needs: [step2]
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      PUBLISH_PROFILE_SECRET: ${{ needs.step2.outputs.OUTPUT_PROFILE}}
+      PUBLISH_PROFILE_SECRET: ${{ needs.step2.steps.check_id.outputs.OUTPUT_PROFILE }}
     # secrets:
     #   PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}',needs.step2.check_id.outputs.OUTPUT_PROFILE)] }}
       # PUBLISH_PROFILE_SECRET: ${{ secrets[format('{0}',needs.step2.outputs.OUTPUT_PROFILE)] }}
