--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -9,9 +9,9 @@ on:
       PUBLISH_PROFILE_SECRET:
         type: string
         required: false
-    secrets:
-      PUBLISH_PROFILE_SECRET:
-        required: false
+    # secrets:
+    #   PUBLISH_PROFILE_SECRET:
+    #     required: false
 
 jobs:
   format-secret:
@@ -22,6 +22,7 @@ jobs:
 
       - name: writing secrets to file
         run: |
+          echo "input for PUlish profile: ${{ inputs.PUBLISH_PROFILE_SECRET }}"
           echo " ${{ secrets[inputs.PUBLISH_PROFILE_SECRET] }}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
 
