--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -37,7 +37,7 @@ jobs:
       run: |
         echo "SECRET: ${{ secrets.SECRET}}"
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
-        echo "${{ steps.check_id.outputs.OUTPUT_PROFILE }}"
+        echo "OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE }}"
   Secret_format_job:
     needs: [step2]
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
