--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -6,12 +6,12 @@ on:
         type: string
         required: true  
         default: staging    
+      # PUBLISH_PROFILE_SECRET:
+      #   type: string
+      #   required: false
+    secrets:
       PUBLISH_PROFILE_SECRET:
-        type: string
         required: false
-    # secrets:
-    #   PUBLISH_PROFILE_SECRET:
-    #     required: false
 
 jobs:
   format-secret:
@@ -22,8 +22,8 @@ jobs:
 
       - name: writing secrets to file
         run: |
-          echo "input for Publish profile: ${{ inputs.PUBLISH_PROFILE_SECRET }}"
-          echo "${{ secrets.PUBLISH_PROFILE_1 }}" > ${{ github.workspace }}/my_secret.txt
+          echo "input for Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+          echo "${{ secrets.PUBLISH_PROFILE_SECRET }}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
 
       - name: Archive Secret File
