--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: writing secrets to file
         run: |
-          echo "input for Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+          echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
           echo "${{ secrets.PUBLISH_PROFILE_SECRET }}" > ${{ github.workspace }}/my_secret.txt
           cat ${{ github.workspace }}/my_secret.txt
 
