--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -19,12 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: staging
     outputs:
-      OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE }}
+      SECRET: ${{ steps.check_id.outputs.SECRET }}
       ITERATION: ${{ steps.check_id.outputs.ITERATION}}
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
-        iteration: [1,2]
 
     steps:
     - name: Check
@@ -33,12 +32,12 @@ jobs:
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-        echo "OUTPUT_PROFILE=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
+        echo "SECRET=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
         echo "ITERATION=${{ matrix.iteration }}" >> $GITHUB_OUTPUT
     - name: test
       run: |
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
-        echo "OUTPUT_PROFILE: ${{ steps.check_id.outputs.OUTPUT_PROFILE }}"
+        echo "SECRET: ${{ steps.check_id.outputs.SECRET }}"
 
   Secret_format_job:
     needs: [step1,step2]
@@ -49,7 +48,7 @@ jobs:
     with:
       environment: staging
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ secrets[needs.step2.outputs.OUTPUT_PROFILE] }}
+      PUBLISH_PROFILE_SECRET: ${{ secrets[needs.step2.outputs.SECRET] }}
 
 
 
