--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -20,11 +20,9 @@ jobs:
     environment: staging
     outputs:
       SECRET: ${{ steps.check_id.outputs.SECRET }}
-      ITERATION: ${{ steps.check_id.outputs.ITERATION }}
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
-        iteration: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
     steps:
     - name: Check
@@ -34,17 +32,13 @@ jobs:
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
         echo "SECRET=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
-        echo "ITERATION=${{ matrix.iteration }}" >> $GITHUB_OUTPUT
     - name: test
       run: |
         echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
         echo "SECRET: ${{ steps.check_id.outputs.SECRET }}"
 
   Secret_format_job:
-    needs: [step1,step2]
-    strategy:
-      matrix:
-        iteration: ${{ fromJSON(needs.step2.outputs.ITERATION) }}
+    needs: [step2]
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
