--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -5,7 +5,11 @@ on:
       environment:
         type: string
         required: true  
-        default: staging    
+        default: staging  
+      secret_var : 
+        type: string
+        required: true  
+        default: staging  
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -20,11 +24,11 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret.txt
-          cat ${{ github.workspace }}/my_secret.txt
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+          cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip ${{ github.workspace }}/my_secret.txt
+        run: zip secret_archive.zip ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
