--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -24,6 +24,7 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
+          echo "inputs secret var: ${{ inputs.secret_var }}"
           echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
           cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
