--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -29,7 +29,7 @@ jobs:
           cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+        run: zip secret_archive.zip ${{ github.workspace }}/*
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
