--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -6,10 +6,13 @@ on:
         type: string
         required: true  
         default: staging  
-      secret_var : 
+      publish_profile : 
         type: string
         required: true  
-        default: staging  
+      db_name : 
+          type: string
+          required: true  
+
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -24,9 +27,10 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo "inputs secret var: ${{ inputs.secret_var }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
-          cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+          echo "inputs secret publish profile var name: ${{ inputs.publish_profile }}"
+          echo "inputs db name  : ${{ inputs.db_name }}"
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
+          cat ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
 
       - name: Archive Secret File
         run: zip secret_archive.zip ${{ github.workspace }}/*
