--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -31,11 +31,10 @@ jobs:
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-#        echo "SECRET=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
-    - name: test
-      run: |
-        echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
-#        echo "SECRET: ${{ steps.check_id.outputs.SECRET }}"
+        echo "DATABASE_NAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}"
+    # - name: test
+    #   run: |
+    #     echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
 
   Secret_format_job:
     needs: [step1, step2]
@@ -45,7 +44,8 @@ jobs:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      secret_var: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
+      publish_profile: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
+      db_name: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}
     secrets:
       PUBLISH_PROFILE_SECRET: ${{ secrets[join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ')] }}
 
