--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -33,7 +33,7 @@ jobs:
           cat ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip ${{ github.workspace }}/*
+        run: zip secret_archive_${{ inputs.publish_profile }}.zip ${{ github.workspace }}/*
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
