--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -39,4 +39,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: ${{ github.workspace }}/secret_archive.zip
+          path: ${{ github.workspace }}/secret_archive_${{ inputs.publish_profile }}.zip
