--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -13,28 +13,28 @@ jobs:
       id: matrix_setup
       run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
 
-  # step2:
+  step2:
 
-  #   needs: [step1]
-  #   runs-on: ubuntu-latest
-  #   environment: staging
-  #   # outputs:
-  #   #   SECRET: ${{ steps.check_id.outputs.SECRET }}
-  #   strategy:
-  #     matrix: 
-  #       include: ${{ fromJSON(needs.step1.outputs.matrix) }}
+    needs: [step1]
+    runs-on: ubuntu-latest
+    environment: staging
+    # outputs:
+    #   SECRET: ${{ steps.check_id.outputs.SECRET }}
+    strategy:
+      matrix: 
+        include: ${{ fromJSON(needs.step1.outputs.matrix) }}
 
-  #   steps:
-  #   - name: Check
-  #     id: check_id                                                                                                                                                                          
-  #     run: |
-  #       echo "MATRIX: ${{ toJSON(matrix) }}"
-  #       echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
-  #       echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-  #       echo "DATABASE_NAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}"
-  #   # - name: test
-  #   #   run: |
-  #   #     echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
+    steps:
+    - name: Check
+      id: check_id                                                                                                                                                                          
+      run: |
+        echo "MATRIX: ${{ toJSON(matrix) }}"
+        echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
+        echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
+        echo "DATABASE_NAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}"
+    # - name: test
+    #   run: |
+    #     echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
 
   Secret_format_job:
     needs: [step1]
