--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -30,7 +30,7 @@ jobs:
         echo "DATABASE_NAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}"
 
   Secret_format_job:
-    needs: [step1]
+    needs: [step1, step2]
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
