--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -29,7 +29,7 @@ jobs:
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
           echo "inputs secret publish profile var name: ${{ inputs.publish_profile }}"
           echo "inputs db name  : ${{ inputs.db_name }}"
-          echo "${{ secrets.PUBLISH_PROFILE_SECRET }}" > ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
           cat ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
 
       - name: Archive Secret File
