reusing previous successful workflow

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -12,7 +12,6 @@ on:
       db_name : 
           type: string
           required: true  
-
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -33,7 +32,7 @@ jobs:
           cat ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive_${{ inputs.publish_profile }}.zip ${{ github.workspace }}/*
+        run: zip secret_archive_${{ inputs.publish_profile }}.zip ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
