--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -6,12 +6,12 @@ on:
         type: string
         required: true  
         default: staging  
-      publish_profile : 
+      secret_var : 
         type: string
         required: true  
       db_name : 
           type: string
-          required: true  
+          required: false  
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -26,16 +26,15 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo "inputs secret publish profile var name: ${{ inputs.publish_profile }}"
-          echo "inputs db name  : ${{ inputs.db_name }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
-          cat ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
+          echo "inputs secret publish profile var name: ${{ inputs.secret_var }}"
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+          cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive_${{ inputs.publish_profile }}.zip ${{ github.workspace }}/my_secret_${{ inputs.publish_profile }}.txt
+        run: zip secret_archive_${{ inputs.secret_var }}.zip ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: ${{ github.workspace }}/secret_archive_${{ inputs.publish_profile }}.zip
+          path: ${{ github.workspace }}/secret_archive_${{ inputs.secret_var }}.zip
