--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -31,7 +31,6 @@ jobs:
         echo "MATRIX: ${{ toJSON(matrix) }}"
         echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
         echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-        echo "DATABASE_NAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}"
 #        echo "SECRET=${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}" >> $GITHUB_OUTPUT
     - name: test
       run: |
@@ -46,7 +45,6 @@ jobs:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      publish_profile: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
-      db_name: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.spring-datasource-url, ', ') }}
+      secret_var: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
     secrets:
       PUBLISH_PROFILE_SECRET: ${{ secrets[join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ')] }}
