reusing the committed successful workflow

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -9,9 +9,7 @@ on:
       secret_var : 
         type: string
         required: true  
-      db_name : 
-          type: string
-          required: false  
+        default: staging  
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -26,15 +24,15 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo "inputs secret publish profile var name: ${{ inputs.secret_var }}"
+          echo "inputs secret var: ${{ inputs.secret_var }}"
           echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
           cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive_${{ inputs.secret_var }}.zip ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+        run: zip secret_archive.zip ${{ github.workspace }}/*
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: ${{ github.workspace }}/secret_archive_${{ inputs.secret_var }}.zip
+          path: ${{ github.workspace }}/secret_archive.zip
