refactored workflow and used diff json keys

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -6,10 +6,16 @@ on:
         type: string
         required: true  
         default: staging  
-      secret_var : 
+      app-name:
+        type: string
+        required: true          
+      publish-profile : 
         type: string
         required: true  
-        default: staging  
+        default: staging
+      spring-db-name:  
+        type: string
+        required: true  
     secrets:
       PUBLISH_PROFILE_SECRET:
         required: false
@@ -24,15 +30,17 @@ jobs:
       - name: writing secrets to file
         run: |
           echo "Publish profile: ${{ secrets.PUBLISH_PROFILE_SECRET }}"
-          echo "inputs secret var: ${{ inputs.secret_var }}"
-          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
-          cat ${{ github.workspace }}/my_secret_${{ inputs.secret_var }}.txt
+          echo "inputs app name: ${{ inputs.app-name }}"
+          echo "inputs publish profile: ${{ inputs.publish-profile }}"
+          echo "inputs db name: ${{ inputs.spring-db-name }}"
+          echo ${{ secrets.PUBLISH_PROFILE_SECRET }} > ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
+          cat ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive.zip ${{ github.workspace }}/*
+        run: zip secret_archive_${{ inputs.publish-profile }}.zip ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
         with:
           name: secret
-          path: ${{ github.workspace }}/secret_archive.zip
+          path: ${{ github.workspace }}/secret_archive_${{ inputs.publish-profile }}.zip
