--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -11,29 +11,15 @@ jobs:
     steps:
     - name: Setup
       id: matrix_setup
-      run: echo "value=$(jq -r -c . <<< '${{vars.TENANT_DETAILS}}')" >> $GITHUB_OUTPUT
+      run: echo "value=$(jq -r -c . <<< '${{vars.serviceDetails}}')" >> $GITHUB_OUTPUT
 
   step2:
-
     needs: [step1]
     runs-on: ubuntu-latest
     environment: staging
-    # outputs:
-    #   SECRET: ${{ steps.check_id.outputs.SECRET }}
     strategy:
       matrix: 
         include: ${{ fromJSON(needs.step1.outputs.matrix) }}
-
-    steps:
-    - name: Check
-      id: check_id                                                                                                                                                                          
-      run: |
-        echo "MATRIX: ${{ toJSON(matrix) }}"
-        echo "APPNAME:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.app-name, ', ') }}"
-        echo "PUBLISH_PROFILE:${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}"
-    - name: test
-      run: |
-        echo "secret value:  ${{ secrets[format('{0}' ,join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', '))] }}"
 
   Secret_format_job:
     needs: [step1, step2]
@@ -43,6 +29,8 @@ jobs:
     uses: Nidhi-Patel20/Git-Practice/.github/workflows/format-secret.yml@main
     with:
       environment: staging
-      secret_var: ${{ join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ') }}
+      app-name: ${{ join(fromJSON(toJSON(matrix)).serviceDetails.*.appName, ', ') }}
+      publish-profile: ${{ join(fromJSON(toJSON(matrix)).serviceDetails.*.publish-profile, ', ') }}
+      spring-db-name: ${{ join(fromJSON(toJSON(matrix)).serviceDetails.*.springDatasourceUrl, ', ') }}
     secrets:
-      PUBLISH_PROFILE_SECRET: ${{ secrets[join(fromJSON(toJSON(matrix)).tenant_details.*.publish-profile, ', ')] }}
+      PUBLISH_PROFILE_SECRET: ${{ secrets[join(fromJSON(toJSON(matrix)).serviceDetails.*.publish-profile, ', ')] }}
