refactoring- format-secret workflow

--- a/.github/workflows/format-secret.yml
+++ b/.github/workflows/format-secret.yml
@@ -37,7 +37,7 @@ jobs:
           cat ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
 
       - name: Archive Secret File
-        run: zip secret_archive_${{ inputs.publish-profile }}.zip ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}
+        run: zip secret_archive_${{ inputs.publish-profile }}.zip ${{ github.workspace }}/my_secret_${{ inputs.publish-profile }}.txt
 
       - name: Upload a Artifact
         uses: actions/upload-artifact@v2
